--- a/src/styles/dashboard/Dashboard.css
+++ b/src/styles/dashboard/Dashboard.css
@@ -52,13 +52,15 @@
 .tooltip-1 {
   position: absolute;
   top: 23%;
-  right: -15%;
+  right: 50%;
+  transform: translateX(100%);
 }
 
 .tooltip-2 {
   position: absolute;
   bottom: 36%;
-  left: -6%;
+  left: 50%;
+  transform: translateX(-100%);
 }
 
 .alt-div {
