--- a/src/styles/planner/Planner.css
+++ b/src/styles/planner/Planner.css
@@ -1,11 +1,13 @@
 .planner-main {
   background: #f6faff;
-  padding: 2.4rem 2rem;
+  padding: 3.3rem 2rem;
 }
 
 .planner-header {
   display: flex;
   justify-content: end;
+  gap: 0.8rem;
+  padding: 0 2rem;
 }
 
 .mid-box {
@@ -15,6 +17,35 @@
 }
 
 .profile-img {
-  height: 28px;
-  width: 28px;
+  height: 32px;
+  width: 32px;
+}
+
+.planner-sub-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1.6rem;
+}
+
+.planner-nav-ico {
+  height: 20px;
+  width: 20px;
+}
+
+.btn-grp {
+  display: flex;
+  gap: 0.8rem;
+}
+
+.cal-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.today-grid {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 2fr 3fr;
+  margin: 1.5rem 0;
 }
