--- a/src/styles/navigation/NavMenu.css
+++ b/src/styles/navigation/NavMenu.css
@@ -4,6 +4,10 @@
   padding: 2.4rem 2rem;
   align-items: center;
   gap: 1.5rem;
+
+  @media (max-width: 1024px) {
+    display: none;
+  }
 }
 
 .logo {
