--- a/src/styles/planner/Planner.css
+++ b/src/styles/planner/Planner.css
@@ -41,12 +41,32 @@
 .cal-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+
+  @media (max-width: 1200px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (max-width: 1024px) {
+    grid-template-columns: repeat(7, 1fr);
+  }
+
+  @media (max-width: 540px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (max-width: 395px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .today-grid {
   display: flex;
   gap: 1rem;
   margin: 1.5rem 0;
+
+  @media (max-width: 1200px) {
+    flex-direction: column;
+  }
 }
 
 .sub-hed-box {
